fea: api docs
